--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <body>
     <h1>Gametime Starter Kit</h1>
 
+    kjashdkjhaskjhdk
+
     <img src="/images/turing-logo.png" alt="turing logo" height="100px" width="100px">
   </body>
 </html>
